Update introduction and rebuild book

--- a/docs/dcc-handbook.tex
+++ b/docs/dcc-handbook.tex
@@ -179,6 +179,8 @@ Depending on the project, each step involves a different amount of work. Step 1 
 
 As a guiding directive, this process should be reproducible. If you are not familiar with the concept of reproducible research, start with this manifesto (\href{https://www.nature.com/articles/s41562-016-0021}{Munafo et al.~2017}). For a deeper dive, we highly recommend the recent book from Christensen, Freese, and Miguel (\href{https://www.ucpress.edu/book/9780520296954/transparent-and-reproducible-social-science-research}{2019}). Although it is framed around social science, the ideas apply generally.
 
+\textbf{Essential reading: Ten Simple Rules for Reproducible Computational Research} Please read this excellent paper on computational reproducibility from \href{https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1003285}{Sandve et al 2013}. It encapsulates many of the practices described herein (we elaborate more, and provide concrete examples).
+
 \section{Automation}\label{automation}
 
 We recommend that the workflow be as automated as possible using a programming language. Automating the workflow in a programming language, and essentially reducing it to text, is advantageous because it makes the process transparent, well documented, easily modified, and amenable to version control; these characteristics lend themselves to reproducible research.
